Bug 1153153: IonMonkey: Repoint the block instead of deleting the block for andor statements, r=bhackett